# kotlin-app-arduino-sketch-ci

./: CMakeLists.txt  LICENSE  README.md  build.gradle
.github/workflows/: android-app.yml  arduino-sketch.yml
android/GitHubViewerApp/: settings.gradle
android/GitHubViewerApp/app/: build.gradle
android/GitHubViewerApp/app/src/main/: AndroidManifest.xml
android/GitHubViewerApp/app/src/main/res/layout/: activity_repository.xml  layout_recycler_view_repository.xml
android/LocalDeviceNameResolution/: settings.gradle
android/LocalDeviceNameResolution/app/: build.gradle
android/LocalDeviceNameResolution/app/src/main/: AndroidManifest.xml
android/LocalDeviceNameResolution/gradle/wrapper/: gradle-wrapper.properties
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
arduino/: CMakeLists.txt
arduino/SmartcarWebserver/: SmartcarWebserver.ino
arduino/SmartcarWebserverTestable/: CMakeLists.txt  CarWithGyroscope.h  Esp32WebServer.h  Group20CarWithGyroscope.cpp  Group20CarWithGyroscope.h  Group20Esp32WebServer.cpp  Group20Esp32WebServer.h  SmartCarWebController.cpp  SmartCarWebController.h  SmartcarWebserverTestable.ino
arduino/SmartcarWebserverWithClass/: SmartCarWebController.h  SmartCarWebController.ino  SmartcarWebserverWithClass.ino
arduino/test/mocks/: MockCarWithGyroscope.hpp
endpoint-emulator/: smartcar_endpoint.py
gradle/wrapper/: gradle-wrapper.properties
test/: CMakeLists.txt
test/mocks/: MockEsp32WebServer.hpp
test/ut/: SmartCarWebController_test.cpp
(+16 files in other folders)
